--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,6 +15,11 @@
 		<a href="/about">About</a>
 		<a href="/blog">Blog</a>
 
-		<h1>My Astro site</h1>
+		<h1>About me</h1>
+		<h2>...and my new website</h2>
+
+		<p>working through the tutorial</p>
+		<p> this will get updated</p>
+		
 	</body>
 </html>
