--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,3 +1,4 @@
+
 ---
 
 ---
@@ -15,6 +16,7 @@
 		<a href="/about">About</a>
 		<a href="/blog">Blog</a>
 
-		<h1>My Astro site</h1>
+		<h1>My Astro learning blog</h1>
+		<p>This is where I will post about my journey</p>
 	</body>
 </html>
